# MOWNit_Simple_Browser_Project

./: .clang-format  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  searchenginecore.cpp  searchenginecore.h  wikipedia_data_processor.cpp
